--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "NATurally Awesome System for Home Automation",
   "main": "dist/app.js",
   "scripts": {
-    "postinstall": "npm run typings",
-    "typings": "node node_modules/typings/dist/bin install"
+    "build": "node node_modules/typescript/bin/tsc -w"
   },
   "author": "Paul Lessing <paul@paullessing.com>",
   "license": "MIT",
@@ -14,10 +13,11 @@
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "helmet": "^2.2.0",
-    "inversify": "^3.0.0-rc.2",
+    "inversify": "^3.0.0",
     "method-override": "^2.3.6",
     "moment": "2.15.1",
     "morgan": "^1.7.0",
+    "mqtt": "^2.3.0",
     "reflect-metadata": "^0.1.9",
     "request": "^2.74.0",
     "request-promise-native": "^1.0.3",
@@ -26,13 +26,21 @@
     "winston": "^2.2.0"
   },
   "devDependencies": {
+    "@types/body-parser": "0.0.33",
     "@types/express": "^4.0.34",
+    "@types/form-data": "0.0.33",
+    "@types/method-override": "0.0.29",
+    "@types/morgan": "^1.7.32",
+    "@types/mqtt": "0.0.33",
+    "@types/request": "0.0.39",
+    "@types/request-promise": "^4.1.33",
     "@types/sprintf-js": "0.0.27",
+    "@types/winston": "^2.2.0",
     "chai": "^3.5.0",
     "mocha": "^3.2.0",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
     "tslint": "^3.15.1",
-    "typings": "^2.1.0"
+    "typescript": "^2.1.5"
   }
 }
