--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "author": "Paul Lessing <paul@paullessing.com>",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.15.2",
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "helmet": "^2.2.0",
@@ -37,6 +36,7 @@
     "@types/sprintf-js": "0.0.27",
     "@types/winston": "^2.2.0",
     "chai": "^3.5.0",
+    "express-router-decorators": "paullessing/express-router-decorators",
     "mocha": "^3.2.0",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
