--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "natasha-smart-home",
   "version": "0.0.1",
   "description": "NATurally Awesome System for Home Automation",
-  "main": "dist/app.js",
+  "main": "dist/web-server/app.js",
   "scripts": {
-    "build": "node node_modules/typescript/bin/tsc -w"
+    "build": "node node_modules/typescript/bin/tsc",
+    "build-watch": "node node_modules/typescript/bin/tsc -w",
+    "serve-home": "node node_modules/concurrently/src/main --kill-others --prefix \"[{name}]\" --names \"tsc ,node\" --prefix-colors \"blue,magenta\" \"npm run build-watch\" \"npm run nodemon-home\"",
+    "nodemon-home": "node node_modules/nodemon/bin/nodemon dist/home-server/server --log=debug"
   },
   "author": "Paul Lessing <paul@paullessing.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/uuid": "^2.0.29",
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "helmet": "^2.2.0",
@@ -22,6 +26,7 @@
     "request-promise-native": "^1.0.3",
     "sprintf-js": "^1.0.3",
     "url": "^0.11.0",
+    "uuid": "^3.0.1",
     "winston": "^2.2.0"
   },
   "devDependencies": {
@@ -36,8 +41,10 @@
     "@types/sprintf-js": "0.0.27",
     "@types/winston": "^2.2.0",
     "chai": "^3.5.0",
+    "concurrently": "^3.1.0",
     "express-router-decorators": "paullessing/express-router-decorators",
     "mocha": "^3.2.0",
+    "nodemon": "^1.11.0",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
     "tslint": "^3.15.1",
