--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "author": "Paul Lessing <paul@paullessing.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/jsonwebtoken": "^7.2.0",
     "@types/uuid": "^2.0.29",
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "helmet": "^2.2.0",
     "inversify": "^3.0.0",
+    "jsonwebtoken": "^7.2.1",
     "method-override": "^2.3.6",
     "moment": "2.15.1",
     "morgan": "^1.7.0",
