--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/jsonwebtoken": "^7.2.0",
+    "@types/node-persist": "^0.0.31",
     "@types/uuid": "^2.0.29",
     "cors": "^2.8.1",
     "express": "^4.14.0",
@@ -23,6 +24,7 @@
     "moment": "2.15.1",
     "morgan": "^1.7.0",
     "mqtt": "^2.3.0",
+    "node-persist": "^2.0.8",
     "reflect-metadata": "^0.1.9",
     "request": "^2.74.0",
     "request-promise-native": "^1.0.3",
