--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
   "author": "Paul Lessing <paul@paullessing.com>",
   "license": "MIT",
   "dependencies": {
-    "@types/jsonwebtoken": "^7.2.0",
-    "@types/node-persist": "^0.0.31",
-    "@types/uuid": "^2.0.29",
+    "@types/minimist": "^1.2.0",
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "helmet": "^2.2.0",
     "inversify": "^3.0.0",
     "jsonwebtoken": "^7.2.1",
     "method-override": "^2.3.6",
+    "minimist": "^1.2.0",
     "moment": "2.15.1",
     "morgan": "^1.7.0",
     "mqtt": "^2.3.0",
@@ -37,12 +36,15 @@
     "@types/body-parser": "0.0.33",
     "@types/express": "^4.0.34",
     "@types/form-data": "0.0.33",
+    "@types/jsonwebtoken": "^7.2.0",
     "@types/method-override": "0.0.29",
     "@types/morgan": "^1.7.32",
     "@types/mqtt": "0.0.33",
+    "@types/node-persist": "^0.0.31",
     "@types/request": "0.0.39",
     "@types/request-promise": "^4.1.33",
     "@types/sprintf-js": "0.0.27",
+    "@types/uuid": "^2.0.29",
     "@types/winston": "^2.2.0",
     "chai": "^3.5.0",
     "concurrently": "^3.1.0",
