--- a/package.json
+++ b/package.json
@@ -12,8 +12,20 @@
   "author": "Paul Lessing <paul@paullessing.com>",
   "license": "MIT",
   "dependencies": {
+    "@angular/common": "^2.3.1",
+    "@angular/compiler": "^2.3.1",
+    "@angular/core": "^2.3.1",
+    "@angular/forms": "^2.3.1",
+    "@angular/http": "^2.3.1",
+    "@angular/platform-browser": "^2.3.1",
+    "@angular/platform-browser-dynamic": "^2.3.1",
+    "@angular/router": "^3.3.1",
+    "@types/jsonwebtoken": "^7.2.0",
+    "@types/node-persist": "^0.0.31",
+    "@types/uuid": "^2.0.29",
     "@types/minimist": "^1.2.0",
     "cors": "^2.8.1",
+    "core-js": "^2.4.1",
     "express": "^4.14.0",
     "helmet": "^2.2.0",
     "inversify": "^3.0.0",
@@ -27,15 +39,20 @@
     "reflect-metadata": "^0.1.9",
     "request": "^2.74.0",
     "request-promise-native": "^1.0.3",
+    "rxjs": "^5.0.1",
     "sprintf-js": "^1.0.3",
+    "ts-helpers": "^1.1.1",
     "url": "^0.11.0",
     "uuid": "^3.0.1",
-    "winston": "^2.2.0"
+    "winston": "^2.2.0",
+    "zone.js": "^0.7.2"
   },
   "devDependencies": {
+    "@angular/compiler-cli": "^2.3.1",
     "@types/body-parser": "0.0.33",
     "@types/express": "^4.0.34",
     "@types/form-data": "0.0.33",
+    "@types/node": "^6.0.42",
     "@types/jsonwebtoken": "^7.2.0",
     "@types/method-override": "0.0.29",
     "@types/morgan": "^1.7.32",
@@ -46,14 +63,16 @@
     "@types/sprintf-js": "0.0.27",
     "@types/uuid": "^2.0.29",
     "@types/winston": "^2.2.0",
+    "angular-cli": "1.0.0-beta.26",
     "chai": "^3.5.0",
+    "codelyzer": "~2.0.0-beta.1",
     "concurrently": "^3.1.0",
     "express-router-decorators": "paullessing/express-router-decorators",
     "mocha": "^3.2.0",
     "nodemon": "^1.11.0",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
-    "tslint": "^3.15.1",
+    "tslint": "^4.3.0",
     "typescript": "^2.1.5"
   }
 }
