--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "natasha-smart-home",
   "version": "0.0.1",
   "description": "NATurally Awesome System for Home Automation",
-  "main": "dist/web-server/app.js",
+  "main": "dist/server/app.js",
   "scripts": {
     "build": "node node_modules/typescript/bin/tsc",
     "build-watch": "node node_modules/typescript/bin/tsc -w",
@@ -21,12 +21,14 @@
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
     "@types/jsonwebtoken": "^7.2.0",
+    "@types/minimist": "^1.2.0",
     "@types/node-persist": "^0.0.31",
     "@types/uuid": "^2.0.29",
-    "@types/minimist": "^1.2.0",
-    "cors": "^2.8.1",
     "core-js": "^2.4.1",
+    "cors": "^2.8.1",
     "express": "^4.14.0",
+    "express-history-api-fallback": "^2.1.0",
+    "global": "^4.3.1",
     "helmet": "^2.2.0",
     "inversify": "^3.0.0",
     "jsonwebtoken": "^7.2.1",
@@ -48,15 +50,16 @@
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
+    "@angular/cli": "^1.0.0-beta.30",
     "@angular/compiler-cli": "^2.3.1",
     "@types/body-parser": "0.0.33",
     "@types/express": "^4.0.34",
     "@types/form-data": "0.0.33",
-    "@types/node": "^6.0.42",
     "@types/jsonwebtoken": "^7.2.0",
     "@types/method-override": "0.0.29",
     "@types/morgan": "^1.7.32",
     "@types/mqtt": "0.0.33",
+    "@types/node": "^6.0.42",
     "@types/node-persist": "^0.0.31",
     "@types/request": "0.0.39",
     "@types/request-promise": "^4.1.33",
@@ -72,7 +75,8 @@
     "nodemon": "^1.11.0",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
+    "ts-node": "1.2.1",
     "tslint": "^4.3.0",
-    "typescript": "^2.1.5"
+    "typescript": "2.0.10"
   }
 }
