--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@types/cors": "^2.8.0",
     "@types/jsonwebtoken": "^7.2.0",
     "@types/minimist": "^1.2.0",
     "@types/node-persist": "^0.0.31",
