--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "node node_modules/typescript/bin/tsc",
     "build-watch": "node node_modules/typescript/bin/tsc -w",
-    "serve": "node node_modules/concurrently/src/main --kill-others --prefix \"[{name}]\" --names \"tsc ,node\" --prefix-colors \"blue,magenta\" \"npm run build-watch\" \"npm run nodemon\"",
+    "serve": "node node_modules/concurrently/src/main --kill-others --prefix \"[{name}]\" --names \"tsc ,node,cli \" --prefix-colors \"blue,magenta,green\" \"npm run build-watch\" \"npm run nodemon\" \"ng serve --port 9000\"",
     "nodemon": "node node_modules/nodemon/bin/nodemon dist/server/server.js --log=debug"
   },
   "author": "Paul Lessing <paul@paullessing.com>",
@@ -29,7 +29,6 @@
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "express-history-api-fallback": "^2.1.0",
-    "global": "^4.3.1",
     "helmet": "^2.2.0",
     "inversify": "^3.0.0",
     "jsonwebtoken": "^7.2.1",
@@ -67,7 +66,6 @@
     "@types/sprintf-js": "0.0.27",
     "@types/uuid": "^2.0.29",
     "@types/winston": "^2.2.0",
-    "angular-cli": "1.0.0-beta.26",
     "chai": "^3.5.0",
     "codelyzer": "~2.0.0-beta.1",
     "concurrently": "^3.1.0",
