--- a/package.json
+++ b/package.json
@@ -2,85 +2,24 @@
   "name": "natasha-smart-home",
   "version": "0.0.1",
   "description": "NATurally Awesome System for Home Automation",
-  "main": "dist/server/app.js",
-  "scripts": {
-    "clean": "node node_modules/del-cli/cli dist",
-    "build": "npm run clean && npm run build-ts && npm run build-ng",
-    "build-ts": "node node_modules/typescript/bin/tsc",
-    "build-ng": "node node_modules/@angular/cli/bin/ng build",
-    "build-watch": "node node_modules/typescript/bin/tsc -w",
-    "serve": "node node_modules/concurrently/src/main --kill-others --prefix \"[{name}]\" --names \"tsc ,node\" --prefix-colors \"blue,magenta\" \"npm run build-watch\" \"npm run nodemon\"",
-    "nodemon": "node node_modules/nodemon/bin/nodemon dist/server/server.js --log=debug",
-    "start": "node dist/server/server --log=info"
-  },
   "author": "Paul Lessing <paul@paullessing.com>",
   "license": "MIT",
+  "private": false,
+  "main": "handler.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
-    "@angular/common": "^2.4.7",
-    "@angular/compiler": "^2.4.7",
-    "@angular/core": "^2.4.7",
-    "@angular/forms": "^2.4.7",
-    "@angular/http": "^2.4.7",
-    "@angular/platform-browser": "^2.4.7",
-    "@angular/platform-browser-dynamic": "^2.4.7",
-    "@angular/router": "^3.4.7",
-    "@types/cors": "^2.8.0",
-    "@types/jsonwebtoken": "^7.2.0",
-    "@types/minimist": "^1.2.0",
-    "@types/node-persist": "^0.0.31",
-    "@types/uuid": "^2.0.29",
-    "core-js": "^2.4.1",
-    "cors": "^2.8.1",
-    "express": "^4.14.0",
-    "express-history-api-fallback": "^2.1.0",
-    "helmet": "^2.2.0",
-    "inversify": "^3.0.0",
-    "jsonwebtoken": "^7.2.1",
-    "method-override": "^2.3.6",
-    "minimist": "^1.2.0",
-    "moment": "2.15.1",
-    "morgan": "^1.7.0",
-    "mqtt": "^2.3.0",
-    "node-persist": "^2.0.8",
-    "reflect-metadata": "^0.1.9",
-    "request": "^2.74.0",
-    "request-promise-native": "^1.0.3",
-    "rxjs": "^5.0.1",
-    "sprintf-js": "^1.0.3",
-    "ts-helpers": "^1.1.1",
-    "url": "^0.11.0",
-    "uuid": "^3.0.1",
-    "winston": "^2.2.0",
-    "zone.js": "^0.7.2"
+    "ask-sdk": "^2.0.7",
+    "source-map-support": "^0.5.0"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.0-beta.30",
-    "@angular/compiler-cli": "^2.4.7",
-    "@types/body-parser": "0.0.33",
-    "@types/express": "^4.0.34",
-    "@types/form-data": "0.0.33",
-    "@types/jsonwebtoken": "^7.2.0",
-    "@types/method-override": "0.0.29",
-    "@types/morgan": "^1.7.32",
-    "@types/mqtt": "0.0.33",
-    "@types/node": "^6.0.42",
-    "@types/node-persist": "^0.0.31",
-    "@types/request": "0.0.39",
-    "@types/request-promise": "^4.1.33",
-    "@types/sprintf-js": "0.0.27",
-    "@types/uuid": "^2.0.29",
-    "@types/winston": "^2.2.0",
-    "chai": "^3.5.0",
-    "codelyzer": "~2.0.0-beta.1",
-    "concurrently": "^3.1.0",
-    "del-cli": "^0.2.1",
-    "express-router-decorators": "paullessing/express-router-decorators",
-    "mocha": "^3.2.0",
-    "nodemon": "^1.11.0",
-    "sinon": "^1.17.6",
-    "sinon-chai": "^2.8.0",
-    "ts-node": "1.2.1",
-    "tslint": "^4.3.0",
-    "typescript": "2.1.5"
+    "@types/aws-lambda": "8.10.1",
+    "@types/node": "^8.0.57",
+    "serverless-alexa-skills": "^0.1.0",
+    "serverless-webpack": "^5.1.1",
+    "ts-loader": "^4.2.0",
+    "typescript": "^2.8.1",
+    "webpack": "^4.5.0"
   }
 }
