Move Alexa logic to separate folder

--- a/alexa/models.yml
+++ b/alexa/models.yml
@@ -18,6 +18,16 @@ en-GB:
             - 'remember weight of the {ItemName}'
             - 'store weight of a {ItemName}'
             - 'remember weight of a {ItemName}'
+            - 'store weight of an {ItemName}'
+            - 'remember weight of an {ItemName}'
+            - 'store the weight of {ItemName}'
+            - 'remember the weight of {ItemName}'
+            - 'store the weight of the {ItemName}'
+            - 'remember the weight of the {ItemName}'
+            - 'store the weight of a {ItemName}'
+            - 'remember the weight of a {ItemName}'
+            - 'store the weight of an {ItemName}'
+            - 'remember the weight of an {ItemName}'
             - '{Weight} grams.'
             - 'it is {Weight} grams.'
             - 'it weighs {Weight} grams.'
