Fix speech model

--- a/alexa/models.yml
+++ b/alexa/models.yml
@@ -39,3 +39,4 @@ en-GB:
           - 'send notification {Notification}'
         - name: AMAZON.YesIntent
         - name: AMAZON.NoIntent
+        - name: AMAZON.CancelIntent
