--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@types/uuid": "^3.4.4",
     "ask-sdk": "^2.0.7",
-    "source-map-support": "^0.5.0"
+    "source-map-support": "^0.5.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@types/aws-lambda": "8.10.1",
